# pei

./: ProjectHome.md
Practica-pei/Codigo/: CMakeLists.txt  ejemplo1.xml
Practica-pei/Codigo/Modelo/: Asignatura.cpp  Asignatura.h  Asignaturas.cpp  Asignaturas.h  CMakeLists.txt  Cita.h  Companero.cpp  Companero.h  Fecha.cpp  Fecha.h  Modelo.cpp  Modelo.h  Nota.cpp  Nota.h  Profesor.cpp  Profesor.h  Sesion.cpp  Sesion.h
Practica-pei/Codigo/Vista/: CMakeLists.txt  Vista.cpp  Vista.h
Practica-pei/Codigo/Vista-gtkmm/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  VistaGtkmmAsignatura.cpp  VistaGtkmmAsignatura.h  VistaGtkmmAsignaturas.cpp  VistaGtkmmAsignaturas.h  VistaGtkmmResumen.h  interfaces.glade  interfaces.glade.h  main.cpp
Practica-pei/Codigo/Vista-multiple/: XformsTimer.cpp  XformsTimer.h  main.cpp
Practica-pei/Codigo/Vista-qt/: CMakeLists.txt  DialogoAcercaDe.cpp  DialogoAcercaDe.h  DialogoAcercaDe.ui  DialogoCita.cpp  DialogoCita.h  DialogoCompanero.h  DialogoNota.ui  DialogoProfesor.cpp  DialogoProfesor.h  DialogoProfesor.ui  DialogoSesion.cpp  DialogoSesion.ui  MainWindow.cpp  MainWindow.h  MainWindow.ui  Vista-qt.pro  VistaQtAsignatura.cpp  VistaQtAsignatura.h  VistaQtAsignatura.ui  VistaQtAsignaturas.cpp  VistaQtAsignaturas.h  VistaQtAsignaturas.ui  VistaQtResumen.cpp  VistaQtResumen.h  main.cpp
Practica-pei/Codigo/Vista-txt/: Auxiliar.cpp  CMakeLists.txt  VistaTxtAsignatura.cpp  VistaTxtAsignaturas.h  main.cpp
Practica-pei/Codigo/Vista-xforms/: CMakeLists.txt  Codificacion.cpp  Codificacion.h  Dialogos.cpp  Dialogos.fd  Dialogos_cb.cpp  Formulario.cpp  Formulario.fd  Formulario.h  Formulario_cb.cpp  VistaXformsAsignatura.cpp  VistaXformsAsignatura.h  VistaXformsAsignaturas.cpp  VistaXformsAsignaturas.h  main.cpp
Practica-pei/Doc/: diagrama.dia
Practica-pei/Doc/html/: Asignatura_8h_source.html  Asignaturas_8h_source.html  Auxiliar_8h_source.html  Companero_8h_source.html  DialogoNota_8h_source.html  Fecha_8h_source.html  Modelo_8h_source.html  Nota_8h_source.html  VistaQtAsignaturas_8h_source.html  VistaXformsAsignatura_8h_source.html  VistaXformsAsignaturas_8h_source.html  classAsignatura-members.html  classAsignatura.html  classCita.html  classCompanero-members.html  classDialogoAcercaDe.html  classDialogoCita.html  classDialogoCompanero-members.html  classDialogoNota.html  classDialogoProfesor-members.html  classDialogoProfesor.html  classDialogoSesion-members.html  classDialogoSesion.html  classFecha-members.html  classMainWindow-members.html  classModelo-members.html  classModelo.html  classProfesor-members.html  classProfesor.html  classSesion-members.html  classSesion.html  classTiXmlAttribute-members.html  classTiXmlAttribute.html  classTiXmlBase-members.html  classTiXmlBase.html  classTiXmlComment.html  classTiXmlDeclaration-members.html  classTiXmlDeclaration.html  classTiXmlElement-members.html  classTiXmlElement.html  (+54 more)
Practica-pei/Doc/html/search/: all_61.html  all_63.html  all_65.html  all_6d.html  all_72.html  all_73.html  all_75.html  all_76.html  all_78.html  classes_63.html  classes_64.html  classes_65.html  classes_6d.html  classes_6e.html  classes_70.html  classes_72.html  classes_73.html  functions_63.html  functions_64.html  functions_6c.html  functions_71.html  functions_75.html  variables_76.html
Practica-pei/nbproject/: Makefile-Debug.mk  Makefile-impl.mk  Package-Debug.bash  configurations.xml  project.xml
trunk/Practica-pei/: datos.txt
trunk/Practica-pei/Codigo/: CMakeLists.txt  Doxyfile.txt  ejemplo1.xml  ejemplo2.xml
trunk/Practica-pei/Codigo/Modelo/: Asignatura.cpp  Asignatura.h  Asignaturas.cpp  Asignaturas.h  Cita.cpp  Cita.h  Companero.cpp  Companero.h  Fecha.cpp  Fecha.h  Modelo.h  Nota.cpp  Nota.h  Profesor.cpp  Profesor.h  Sesion.cpp  Sesion.h
trunk/Practica-pei/Codigo/Vista/: CMakeLists.txt  Vista.cpp  Vista.h
trunk/Practica-pei/Codigo/Vista-gtkmm/: CMakeLists.txt  VistaGtkmmAsignatura.cpp  VistaGtkmmAsignatura.h  VistaGtkmmAsignaturas.cpp  VistaGtkmmAsignaturas.h  VistaGtkmmResumen.cpp  VistaGtkmmResumen.h  interfaces.glade  interfaces.glade.h  main.cpp
trunk/Practica-pei/Codigo/Vista-multiple/: CMakeLists.txt  XformsTimer.cpp  XformsTimer.h  main.cpp
trunk/Practica-pei/Codigo/Vista-qt/: CMakeLists.txt  DialogoCita.cpp  DialogoCita.h  DialogoCita.ui  DialogoCompanero.cpp  DialogoCompanero.h  DialogoCompanero.ui  DialogoNota.cpp  DialogoNota.h  DialogoProfesor.ui  DialogoSesion.cpp  DialogoSesion.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  Vista-qt.pro  VistaQtAsignatura.cpp  VistaQtAsignatura.h  VistaQtAsignatura.ui  VistaQtAsignaturas.cpp  VistaQtAsignaturas.h  VistaQtAsignaturas.ui  VistaQtResumen.cpp  VistaQtResumen.h  VistaQtResumen.ui  icons.qrc  main.cpp
trunk/Practica-pei/Codigo/Vista-txt/: Auxiliar.h  CMakeLists.txt  VistaTxtAsignatura.h  VistaTxtAsignaturas.cpp  VistaTxtAsignaturas.h  main.cpp
trunk/Practica-pei/Codigo/Vista-xforms/: CMakeLists.txt  Dialogos.cpp  Dialogos.h  Dialogos_cb.cpp  Formulario.cpp  Formulario.fd  Formulario.h  Formulario_cb.cpp  VistaXformsAsignatura.cpp  VistaXformsAsignatura.h  VistaXformsAsignaturas.cpp  VistaXformsAsignaturas.h  main.cpp
trunk/Practica-pei/Doc/diagramas/: .project  diagramas.emx
trunk/Practica-pei/Doc/html/: Cita_8h_source.html  Codificacion_8h_source.html  DialogoAcercaDe_8h_source.html  DialogoCita_8h_source.html  DialogoCompanero_8h_source.html  DialogoProfesor_8h_source.html  DialogoSesion_8h_source.html  Dialogos_8h_source.html  Formulario_8h_source.html  MainWindow_8h_source.html  Profesor_8h_source.html  Sesion_8h_source.html  VistaGtkmmAsignatura_8h_source.html  VistaGtkmmAsignaturas_8h_source.html  VistaGtkmmResumen_8h_source.html  VistaQtAsignatura_8h_source.html  VistaQtResumen_8h_source.html  VistaTxtAsignatura_8h_source.html  VistaTxtAsignaturas_8h_source.html  Vista_8h_source.html  XformsTimer_8h_source.html  annotated.html  classAsignaturas-members.html  classAsignaturas.html  classCita-members.html  (+75 more)
trunk/Practica-pei/nbproject/: Makefile-Release.mk  Makefile-variables.mk  Package-Release.bash  configurations.xml
(+28 files in other folders)
